fixed active navbar underline spacing

--- a/css/custom.css
+++ b/css/custom.css
@@ -574,7 +574,7 @@ a {
   box-shadow: 0 2px 3px 0 rgba(0, 0, 0, 0.25);
   position: fixed;
   top: 0;
-  height: 75px; }
+  height: 60px; }
   .navbar-custom .navbar-brand {
     color: #0a0c0d;
     margin: 0;
@@ -614,7 +614,7 @@ a {
       position: absolute !important;
       width: 100% !important;
       height: 3px !important;
-      bottom: 2px !important;
+      bottom: -6px !important;
       left: 0 !important;
       background-color: #bd2130 !important;
       -webkit-transform: scaleX(1) !important;
@@ -655,7 +655,7 @@ a {
   box-shadow: 0 2px 3px 0 rgba(0, 0, 0, 0.25);
   border-radius: 0px;
   position: absolute;
-  margin-top: 75px;
+  margin-top: 60px;
   z-index: 999;
   width: 100%; }
 
@@ -666,7 +666,7 @@ a {
   width: 100%; }
 
 .carousel {
-  margin-top: 75px; }
+  margin-top: 60px; }
 
 .carousel-item.active,
 .carousel-item-next,
