--- a/scss/_navbar.scss
+++ b/scss/_navbar.scss
@@ -63,7 +63,7 @@
       position: absolute !important;
       width: 100% !important;
       height: 3px !important;
-      bottom: 2px !important;
+      bottom: -6px !important;
       left: 0 !important;
       background-color: $navbar-custom-active-color !important;
       -webkit-transform: scaleX(1) !important;
